Add realtime orchestrator implementation and some more KPIs